# StockPrediction

./: BSE100.csv  CMakeLists.txt  ITimeSeries.hpp  MinMaxScaler.hpp  NetworkConstants.cpp  NetworkConstants.hpp  NetworkTrainer.cpp  NetworkTrainer.hpp  README.md  RequestHandler.cpp  RequestHandler.hpp  StockLSTM.cpp  StockLSTM.hpp  StockPredictor.cpp  StockPredictor.hpp  StockPrices.cpp  StockPrices.hpp  Timer.cpp  Timer.hpp  csv.h  index.html  plotter.py  stockPred.cpp
